[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"  # プロジェクト名を指定してください
version = "0.1.0"            # プロジェクトのバージョンを指定してください
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.55.3",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "scipy==1.14.1",
    "setuptools==75.1.0",
    "six==1.17.0",
    "tzdata==2024.2",
    "wheel==0.44.0",
]

# オプション: プロジェクトのメタデータを追加できます
# authors = [
#     { name = "Your Name", email = "you@example.com" },
# ]
# description = "A short description of your project."
# readme = "README.md"
# requires-python = ">=3.8"
# license = { text = "MIT" }